DT-351 adding feature flag for tanagra

--- a/api/config/config_stable.json
+++ b/api/config/config_stable.json
@@ -120,7 +120,8 @@
     "enableConceptSetsInCohortBuilder": false,
     "enableCromwellGKEApp": true,
     "enableRStudioGKEApp": false,
-    "enableDataExplorer": false
+    "enableDataExplorer": false,
+    "enableTanagra": false
   },
   "actionAudit": {
     "logName": "workbench-action-audit-stable",
