--- a/api/config/config_local.json
+++ b/api/config/config_local.json
@@ -120,7 +120,8 @@
     "enableConceptSetsInCohortBuilder": true,
     "enableCromwellGKEApp": true,
     "enableRStudioGKEApp": true,
-    "enableDataExplorer": true
+    "enableDataExplorer": true,
+    "enableTanagra": false
   },
   "actionAudit": {
     "logName": "workbench-action-audit-local",
