--- a/api/src/main/resources/workbench-api.yaml
+++ b/api/src/main/resources/workbench-api.yaml
@@ -4704,6 +4704,10 @@ definitions:
         type: boolean
         default: false
         description: Whether to enable visual data explorer.
+      enableTanagra:
+        type: boolean
+        default: false
+        description: Whether to enable Tanagra.
 
   RuntimeImage:
     type: object
