DT-351 adding feature flag for tanagra (#7610)
[DT-351][risk=no] adding feature flag for tanagra

--- a/api/config/config_local.json
+++ b/api/config/config_local.json
@@ -121,7 +121,8 @@
     "enableConceptSetsInCohortBuilder": true,
     "enableCromwellGKEApp": true,
     "enableRStudioGKEApp": true,
-    "enableDataExplorer": true
+    "enableDataExplorer": true,
+    "enableTanagra": false
   },
   "actionAudit": {
     "logName": "workbench-action-audit-local",
