--- a/api/src/main/resources/workbench-api.yaml
+++ b/api/src/main/resources/workbench-api.yaml
@@ -5586,7 +5586,7 @@ definitions:
     enum:
     - NONE
     - PERSON
-    - SURVEY
+    - SURVEY_ALL
     - FITBIT
     - FITBIT_HEART_RATE_SUMMARY
     - FITBIT_HEART_RATE_LEVEL
@@ -5597,6 +5597,14 @@ definitions:
     - WHOLE_GENOME
     - BOTH
     - ZIP_CODE_SOCIOECONOMIC
+    - SURVEY_BASICS
+    - SURVEY_LIFESTYLE
+    - SURVEY_OVERALL_HEALTH
+    - SURVEY_HEALTHCARE_ACCESS_UTILIZATION
+    - SURVEY_COPE
+    - SURVEY_SDOH
+    - SURVEY_COVID_VACCINE
+    - SURVEY_PFHH
   DataSetExportRequest:
     type: object
     required:
