--- a/api/build.gradle
+++ b/api/build.gradle
@@ -47,7 +47,7 @@ plugins {
     // the newer release version and have AoU-specific modifications re-applied.
     id 'org.hidetake.swagger.generator' version '2.18.2'
     id 'org.owasp.dependencycheck' version '7.4.4'
-    id 'org.springframework.boot' version '2.3.12.RELEASE'
+    id 'org.springframework.boot' version '2.7.4'
 }
 
 
@@ -508,7 +508,7 @@ dependencies {
     __tools__Implementation 'commons-cli:commons-cli:1.5.0'
     __tools__Implementation 'com.opencsv:opencsv:5.7.0'
 
-    testImplementation 'org.mockito:mockito-core:2.28.2'
+    testImplementation 'org.mockito:mockito-core:5.3.1'
     testImplementation "com.google.truth:truth:$project.ext.GOOGLE_TRUTH_VERSION"
     testImplementation "com.google.truth.extensions:truth-java8-extension:$project.ext.GOOGLE_TRUTH_VERSION"
     testImplementation 'com.h2database:h2:1.4.194'
