--- a/api/config/config_prod.json
+++ b/api/config/config_prod.json
@@ -118,7 +118,7 @@
     "enableGenomicExtraction": true,
     "enablePrivateDataprocWorker": false,
     "ccSupportWhenAdminLocking": true,
-    "enableConceptSetsInCohortBuilder": false,
+    "enableConceptSetsInCohortBuilder": true,
     "enableCromwellGKEApp": true,
     "enableRStudioGKEApp": false,
     "enableDataExplorer": false,
