changed SURVEY_ALL to SURVEY for prePackaged... to simplify

--- a/api/src/main/resources/workbench-api.yaml
+++ b/api/src/main/resources/workbench-api.yaml
@@ -5586,7 +5586,7 @@ definitions:
     enum:
     - NONE
     - PERSON
-    - SURVEY_ALL
+    - SURVEY
     - SURVEY_BASICS
     - SURVEY_LIFESTYLE
     - SURVEY_OVERALL_HEALTH
