--- a/api/build.gradle
+++ b/api/build.gradle
@@ -120,6 +120,11 @@ def swagger2JavaClient(yaml, pkg, rawOptExtras = []) {
                     'invokerPackage'   : "${SWAGGER_CODEGEN_BASE_PKG}.${pkg}",
                     'modelPackage'     : "${SWAGGER_CODEGEN_BASE_PKG}.${pkg}.model",
                     'apiPackage'       : "${SWAGGER_CODEGEN_BASE_PKG}.${pkg}.api",
+                    // java8
+                    // Option. Use Java8 classes instead of third party equivalents
+                    //   true - Use Java 8 classes such as Base64
+                    //   false - Various third party libraries as needed
+                    'java8'            : 'true',
             ]
         }
     }
@@ -149,6 +154,7 @@ def swagger3JavaClient(yaml, pkg, rawOptExtras = []) {
                     'invokerPackage'   : "${SWAGGER_CODEGEN_BASE_PKG}.${pkg}",
                     'modelPackage'     : "${SWAGGER_CODEGEN_BASE_PKG}.${pkg}.model",
                     'apiPackage'       : "${SWAGGER_CODEGEN_BASE_PKG}.${pkg}.api",
+                    'java8'            : 'true',
             ]
         }
         // Validation only works for Swagger 2 - skip.
@@ -212,7 +218,8 @@ swaggerSources {
                     // Generates delegate interfaces; used to make method annotations work without
                     // having to copy them to our implementations.
                     'delegatePattern': 'true',
-                    'dateLibrary'    : 'java8'
+                    'dateLibrary'    : 'java8',
+                    'java8'          : 'true',
             ]
         }
     }
@@ -639,8 +646,12 @@ appengineStart {
 group = 'org.pmiops.allofus.workbench'
 version = '0.1.0'          // Version in generated output
 
-sourceCompatibility = 1.8
-targetCompatibility = 1.8
+// This restricts the language features that may be used to those at or below the given Java
+// version.
+sourceCompatibility = 11
+
+// This restricts the runtime environment to be at or above the given Java version.
+targetCompatibility = 11
 
 task listProjectAPIs(type: GenerateAPIListingTask)
 
@@ -823,12 +834,12 @@ task exportWorkspaceOperations(type: JavaExec) {
 
 compileKotlin {
     kotlinOptions {
-        jvmTarget = "1.8"
+        jvmTarget = "11"
     }
 }
 compileTestKotlin {
     kotlinOptions {
-        jvmTarget = "1.8"
+        jvmTarget = "11"
     }
 }
 
