Add missing PD type "balanced" (present in Leo swagger)

--- a/api/src/main/resources/leonardo.yaml
+++ b/api/src/main/resources/leonardo.yaml
@@ -1934,6 +1934,7 @@ components:
       enum:
         - pd-standard
         - pd-ssd
+        - pd-balanced
     CloudProvider:
       type: string
       enum:
