--- a/api/src/main/webapp/WEB-INF/queue.yaml
+++ b/api/src/main/webapp/WEB-INF/queue.yaml
@@ -80,3 +80,15 @@ queue:
   retry_parameters:
     task_retry_limit: 1
     task_age_limit: 5m
+
+- name: deleteTestUserRawlsWorkspacesQueue
+  target: api
+
+  # rate parameters
+  bucket_size: 50
+  rate: 1/s
+  max_concurrent_requests: 10
+
+  retry_parameters:
+    task_retry_limit: 1
+    task_age_limit: 5m
