--- a/api/build.gradle
+++ b/api/build.gradle
@@ -6,7 +6,6 @@ buildscript {
     // External properties on the default project. Values declared in ext blocks
     // outside of the buildscript block aren't usable here.
     ext {
-        GAE_VERSION = '2.0.9'
         GOOGLE_TRUTH_VERSION = '1.1.3'
         GSON_VERSION = '2.9.0'
         HIBERNATE_VERSION = '5.6.9.Final'
@@ -405,7 +404,7 @@ dependencies {
     implementation 'com.google.apis:google-api-services-cloudresourcemanager:v3-rev20220925-2.0.0'
     implementation 'com.google.apis:google-api-services-oauth2:v2-rev20200213-2.0.0'
     implementation 'com.google.apis:google-api-services-iam:v1-rev20220825-2.0.0'
-    implementation "com.google.appengine:appengine-api-1.0-sdk:$project.ext.GAE_VERSION"
+    implementation 'com.google.api-client:google-api-client-appengine:2.2.0'
     implementation 'com.google.auth:google-auth-library-appengine:1.11.0'
     implementation 'com.google.auth:google-auth-library-oauth2-http:1.11.0'
     implementation 'com.google.cloud.sql:mysql-socket-factory:1.7.0'
