[DT-356][risk=no] Implement prepackaged sets for individual surveys (#7661)
* Updated PrePackagedConceptSetEnum

* Updated PrePackagedConceptSetEnum and partial implementation for preview data

* changed SURVEY_ALL to SURVEY for prePackaged... to simplify

* COmpleted all individual surveys using cb_criteria ref. Need to fix for PFHH

* Completed all individual surveys using cb_criteria ref. Need to fix for PFHH

* Updated PrePackagedConceptSetEnum

* Updated PrePackagedConceptSetEnum and partial implementation for preview data

* changed SURVEY_ALL to SURVEY for prePackaged... to simplify

* COmpleted all individual surveys using cb_criteria ref. Need to fix for PFHH

* Completed all individual surveys using cb_criteria ref. Need to fix for PFHH

* rebased..with main

* work in progress...need to fix tabbed sublist...

* fixed UI issues

* Fixed codacy issues

* Fixed FITBIT_SLEEP_DAILY_SUMMARY that was mistakenly removed

* Its is weird to use mockPersonIdQuery() in test testBuildConceptIdListClause_[same|different] ... and again partition the mocked...

* Updated for unselection og surveys when there are user survey-conceptSets

* Updated with PR comments

* Update ui/src/app/pages/data/data-set/dataset-page.tsx

Co-authored-by: Will Dolbeer <40036095+dolbeew@users.noreply.github.com>

* Update ui/src/app/pages/data/data-set/dataset-page.tsx

Co-authored-by: Will Dolbeer <40036095+dolbeew@users.noreply.github.com>

---------

Co-authored-by: Will Dolbeer <40036095+dolbeew@users.noreply.github.com>

--- a/api/src/main/resources/workbench-api.yaml
+++ b/api/src/main/resources/workbench-api.yaml
@@ -5575,6 +5575,14 @@ definitions:
     - NONE
     - PERSON
     - SURVEY
+    - SURVEY_BASICS
+    - SURVEY_LIFESTYLE
+    - SURVEY_OVERALL_HEALTH
+    - SURVEY_HEALTHCARE_ACCESS_UTILIZATION
+    - SURVEY_COPE
+    - SURVEY_SDOH
+    - SURVEY_COVID_VACCINE
+    - SURVEY_PFHH
     - FITBIT
     - FITBIT_HEART_RATE_SUMMARY
     - FITBIT_HEART_RATE_LEVEL
