Updated controller function name in order to allow for more specificity in upcoming disk controller functions.

--- a/api/src/main/resources/workbench-api.yaml
+++ b/api/src/main/resources/workbench-api.yaml
@@ -976,7 +976,7 @@ paths:
   "/v1/workspaces/{workspaceNamespace}/disks":
     get:
       summary: Lists persistent disks in the user's workspace. Only disks in READY/CREATING/RESTORING state will be returned.
-      operationId: listDisksInWorkspace
+      operationId: listOwnedDisksInWorkspace
       tags:
         - disks
       parameters:
