--- a/api/build.gradle
+++ b/api/build.gradle
@@ -359,6 +359,10 @@ clean.doFirst {
 }
 
 repositories {
+    maven {
+        // for Terra service clients (currently sam-client)
+        url 'https://broadinstitute.jfrog.io/artifactory/libs-release-local'
+    }
     mavenCentral()
 }
 
@@ -472,6 +476,9 @@ dependencies {
     implementation "org.mapstruct:mapstruct:$project.ext.MAPSTRUCT_VERSION"
     implementation 'jakarta.mail:jakarta.mail-api:2.1.1'
     testAnnotationProcessor "org.mapstruct:mapstruct-processor:$project.ext.MAPSTRUCT_VERSION"
+
+    // latest as of 12 May 2023 10:19:45 -0400
+    implementation "org.broadinstitute.dsde.workbench:sam-client_2.13:0.1-00d8cfd-SNAP"
 
     // Dependencies for Swagger codegen-generated sources. This should include all dependencies required by Swagger's
     // default okhttp API codegen templates (see https://github.com/swagger-api/swagger-codegen/blob/v2.2.3/samples/client/petstore/spring-stubs/pom.xml)
