--- a/api/config/config_prod.json
+++ b/api/config/config_prod.json
@@ -109,7 +109,7 @@
       "lookbackPeriod": 330,
       "trainingLookbackPeriod": 30
     },
-    "enableApiUrlCheck": false
+    "enableApiUrlCheck": true
   },
   "featureFlags": {
     "unsafeAllowDeleteUser": false,
