--- a/api/config/config_preprod.json
+++ b/api/config/config_preprod.json
@@ -1,6 +1,7 @@
 {
   "firecloud": {
     "baseUrl": "https:\/\/api.firecloud.org",
+    "calhounBaseUrl": "https:\/\/calhoun.dsde-prod.broadinstitute.org",
     "rawlsBaseUrl": "https:\/\/rawls.dsde-prod.broadinstitute.org",
     "samBaseUrl": "https:\/\/sam.dsde-prod.broadinstitute.org",
     "terraUiBaseUrl": "https:\/\/app.terra.bio",
