--- a/ui/tsconfig.json
+++ b/ui/tsconfig.json
@@ -8,12 +8,8 @@
     "moduleResolution": "node",
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
-    "target": "es5",
-    "lib": [
-      "es2016",
-      "es2018.promise",
-      "dom"
-    ],
+    "target": "es2022",
+    "lib": ["dom"],
     "module": "esnext",
     "baseUrl": "./src",
     "jsx": "react-jsx",
