[RW-9991][risk=no] Move delete disk business logic from controller to service. (#7684)

--- a/api/src/main/resources/workbench-api.yaml
+++ b/api/src/main/resources/workbench-api.yaml
@@ -4267,7 +4267,7 @@ paths:
           schema:
             "$ref": "#/definitions/ListDisksResponse"
         404:
-          description: Workspace found
+          description: Workspace not found
 definitions:
   ArchivalStatus:
     type: string
