--- a/api/build.gradle
+++ b/api/build.gradle
@@ -474,7 +474,9 @@ dependencies {
     testAnnotationProcessor "org.mapstruct:mapstruct-processor:$project.ext.MAPSTRUCT_VERSION"
 
     // latest as of 12 May 2023 10:19:45 -0400
-    implementation "org.broadinstitute.dsde.workbench:sam-client_2.13:0.1-00d8cfd-SNAP"
+    implementation("org.broadinstitute.dsde.workbench:sam-client_2.13:0.1-00d8cfd-SNAP") {
+      exclude group: 'org.apache.oltu.oauth2', module: 'org.apache.oltu.oauth2.common'
+    }
 
     // Dependencies for Swagger codegen-generated sources. This should include all dependencies required by Swagger's
     // default okhttp API codegen templates (see https://github.com/swagger-api/swagger-codegen/blob/v2.2.3/samples/client/petstore/spring-stubs/pom.xml)
