--- a/api/src/main/resources/workbench-api.yaml
+++ b/api/src/main/resources/workbench-api.yaml
@@ -4268,6 +4268,29 @@ paths:
             "$ref": "#/definitions/ListDisksResponse"
         404:
           description: Workspace not found
+  "/v1/admin/workspaces/{workspaceNamespace}/disks/{diskName}":
+    parameters:
+    - "$ref": "#/parameters/workspaceNamespace"
+    - in: path
+      name: diskName
+      description: name of the disk admin wants to delete
+      type: string
+      required: true
+    delete:
+      tags:
+      - diskAdmin
+      description:  Deletes a disk as an admin. Requires the
+        RESEARCHER_DATA_VIEW authority.
+      operationId: deleteDisk
+      responses:
+        200:
+          description: success
+          schema:
+            "$ref": "#/definitions/EmptyResponse"
+        409:
+          description: This disk is attached to a running app or runtime.
+          schema:
+            "$ref": "#/definitions/EmptyResponse"
 definitions:
   ArchivalStatus:
     type: string
