[RW-9102][risk=low] Support preview Rstudio files using Terra Calhoun service (#7686)
* int commit

* lint

* fix test

* resolve conflict

--- a/api/build.gradle
+++ b/api/build.gradle
@@ -181,6 +181,10 @@ swaggerSources {
             '--model-name-prefix', 'Leonardo'
     ])
 
+    calhoun swagger3JavaClient("calhoun.yaml", "calhoun", [
+            '--model-name-prefix', 'Calhoun'
+    ])
+
     // Workbench needs a special configuration style, as we generate Spring server
     // bindings in this case.
     workbench {
