--- a/ui/package.json
+++ b/ui/package.json
@@ -32,6 +32,8 @@
     "@fortawesome/pro-regular-svg-icons": "^6.1.2",
     "@fortawesome/pro-solid-svg-icons": "^6.1.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^14.0.0",
     "@types/color": "^3.0.2",
     "@types/enzyme": "^3.10.10",
     "@types/jest": "^27.5.1",
